<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_admin_register"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/page_title_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/page_title"
            android:layout_alignLeft="@id/page_title"
            android:layout_alignRight="@id/page_title"
            android:layout_marginTop="12dp"
            android:background="#56c79c" />

        <TextView
            android:id="@+id/message_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_title_line"
            android:layout_marginTop="18dp"
            android:text="@string/label_admin_register"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/admin_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_login"
            android:layout_marginTop="60dp"
            android:text="@string/label_admin_id"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/admin_id"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_id_title"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_id"
            android:layout_marginTop="15dp"
            android:text="@string/label_password"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_title"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/password_check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="15dp"
            android:text="@string/label_password_check"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password_check"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_check_title"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/password_hint_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_check"
            android:layout_marginTop="15dp"
            android:text="@string/label_password_hint"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password_hint"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_hint_title"
            android:layout_marginTop="8dp"
            android:imeActionLabel="@string/button_continue"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/selector_rectangle_56c79c_en_dis"
            android:enabled="false"
            android:minHeight="44dp"
            android:text="@string/button_continue"
            android:textColor="#fff" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading_wrap"
        android:visibility="gone"
        android:background="#30000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"

            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
